# basic_actix_web_server

./: Cargo.toml  README.md  state.json
src/: main.rs  processes.rs
src/json_serialization/: to_do_items.rs
src/to_do/structs/: base.rs
src/views/auth/: mod.rs
src/views/to_do/: create.rs  mod.rs  utils.rs
