[package]
name = "basic_actix_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
futures = "0.3.5"
